--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="service">
       <img src="./resources/images/service_ac.png">
-      <h3>AIR CONDITIONING</h3>
+      <h3>A/C SERVICE</h3>
     </div>
 
     <div class="service">
@@ -63,9 +63,9 @@
   <div class="blue_background">
 
     <div class="container" id="contact">
-      <h3>LET US SERVICE YOUR CAR WITH OUR TOP-NOTCH CUSTOMER SERVICE!</h3>
-      <h3>3331 5TH AVE N.<br>ST. PETERSBURG, FL 33710</h3>
-      <h3>OR GIVE US A CALL IF YOU HAVE ANY QUESTIONS:<br>(727) 323-1920</h3>
+      <h2>LET US SERVICE YOUR CAR WITH OUR TOP-NOTCH CUSTOMER SERVICE AND YEARS OF EXPERTISE!</h2>
+      <h2>3331 5TH AVE N.<br>ST. PETERSBURG, FL 33710</h2>
+      <h2>(727) 323-1920</h2>
     </div>
 
   </div>
