--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Bevan|Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bevan|Open+Sans:700" rel="stylesheet">
   </head>
   <body>
 
@@ -16,6 +16,16 @@
       <img src="./resources/images/logo_full_color.png">
     </div>
   </header>
+
+<!-- Navigation -->
+
+  <nav>
+    <div class="container">
+      <span><a href="#services">SERVICES</a></span>
+      <span><a href="#contact">CONTACT</a></span>
+    </div>
+  </nav>
+
 
 <!-- Hero Section -->
 
