Initial Build Complete.

--- a/index.html
+++ b/index.html
@@ -11,29 +11,38 @@
 
 <!-- Header Section -->
 
-  <header>
-    <div class="container">
-      <img src="./resources/images/logo_full_color.png">
-    </div>
-  </header>
+  <div class="background_top">
+
+    <header>
+      <div class="container">
+        <a href="./index.html" class="logo"><img src="./resources/images/logo_white.png"></a>
+      </div>
+    </header>
 
 <!-- Navigation -->
 
-  <nav>
-    <div class="container">
-      <span><a href="#services">SERVICES</a></span>
-      <span><a href="#contact">CONTACT</a></span>
+    <nav>
+      <div class="container">
+        <!-- <span><a href="#about">ABOUT</a></span> -->
+        <span><a href="#service">SERVICES</a></span>
+        <span><a href="#special">SPECIAL</a></span>
+        <span><a href="#contacts">CONTACT</a></span>
+      </div>
+    </nav>
+
+<!-- About Section -->
+
+    <div class="container" id="about">
+      <h1>50 YEARS SERVING THE ST. PETERSBURG AND GREATER TAMPA BAY AREA</h1>
     </div>
-  </nav>
 
-
-<!-- Hero Section -->
-
-  <div class="container" id="hero">
-    <h1>50 YEARS SERVING THE ST. PETERSBURG AND GREATER TAMPA BAY AREA</h1>
   </div>
 
 <!-- Services Section -->
+
+  <div class="container" id="service">
+    <h3>OUR ASE CERTIFIED DIAGNOSTIC SPECIALISTS OFFER A VARIETY OF SERVICES, INCLUDING:</h3>
+  </div>
 
   <div class="container" id="services">
 
@@ -69,7 +78,20 @@
 
   </div>
 
+<!-- Special Section -->
+
+  <div class="container" id="special">
+    <img src="./resources/images/service_oil.png">
+    <div class="titles">
+      <h1>OIL CHANGE SPECIAL:</h1>
+      <h1>$29.96 w/FREE BRAKE INSPECTION</h1>
+      <h3>*ON MOST CARS</h3>
+    </div>
+  </div>
+
 <!-- Contact Section -->
+
+  <div id="contacts"></div>
 
   <div class="blue_background">
 
@@ -80,6 +102,16 @@
     </div>
 
   </div>
+
+<!-- Footer Section -->
+
+  <footer>
+
+    <div class="container">
+      <span>Copyright Barbato Inc. Site by <a href="http://www.jamestfoster.com" target="_blank">James T Foster Design.</a></span>
+    </div>
+
+  </footer>
 
   </body>
 </html>
