--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Barbato's Service Center</title>
+    <title>Barbato's Inc Service Center : Automotive Repair</title>
+    <meta name ="keywords" content="barbatos, automotive, repair, st petersburg, florida, service, center, inc, ase, certified, car, truck, diagnostic,">
+    <meta name ="description" content="Barbatos Inc Service Center, Automotive Diagnostics and Repair with 50 years experience serving St Petersburg and the Greater Tampa Bay Area.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
